# Automotive-Project

./: Access Mysql.txt
CAN/parseHMI/: README.txt
Converter/: message_catalog.json
Converter/light/readfromLog/: analysis_results.txt  lights_log.txt
FINAL_PFE_scripts/LIN/window/: best cnv deepseek.txt
FINAL_PFE_scripts/ldf/: master.py  slave.py
FINAL_PFE_scripts/shell/master/: light_analysis.txt  lighting_response.txt  tempCodeRunnerFile.py  window_response.txt
FINAL_PFE_scripts/shell/slave/: main_slave.py
FINAL_PFE_scripts/test_shiftregister/: all.py  blink.py  butt_tkinter1.py  light_slave.py  safety.py  slave_window.py  slave_window2.py  slave_window3.py  test.py  window1.py
FINAL_PFE_scripts/without_shiftregister/door/: slave.py
LIN_lv0/hello/: uarts.py
LIN_protocol/lv0/: master.py  slave.py
LIN_protocol/lv1/: master.py  slave.py
all files/final/PFE-2025/vehicle_client/: CMakeLists.txt
all files/final/PFE-2025/vehicle_client/src/: vsomeip.json
all files_CentralECU/: DirectoryCentralECU.txt
all files_CentralECU/PFE-2025/mockupDoors/: CMakeLists.txt
all files_CentralECU/final/PFE-2025/mockupClimate/src/: CMakeLists.txt  main.cpp
all files_CentralECU/final/PFE-2025/mockupWindow/tests/: CMakeLists.txt  test_windows_client.cpp
centralECU/: README.txt
dbc/Window/: master_window.py  slave_window.py
door/final/: master.py
finalPFE_2/: Lights_analysis.txt  lighting_response.txt  slave_light.py  slave_window.py  window_response.txt  windows_analysis.txt
forProduction_khalil/converter_light/: message_catalog.json
forProduction_khalil/oldjson/: message_catalog.json
light/CAN/bidirectional/: analysis_results.txt
light/LIN/master/: analysis_results.txt  lighting_response.txt  master.py
light/LIN/slave/: slave.py
light/sendSQL/: master.py  simplified_results.txt
other/LIN_lv0/hello/: uartr.py
other/MixCanLin/callcanlin/: README.txt
other/web/LINonly/: masterFinal.py  slave7.py
other/web/improve_frontend/: index.html  script.js  styles.css
run_all/: shell.py  shell2.py
shell/finalVersion/master/: main_master.py  main_master_pid.py  master_window.py
shell/finalVersion/slave/: slave_light.py
shiftregister2/: blink.py  blink2.py  tkinter2.py  turnon.py
window/CAN/: DeepSeek.txt
window/bidirectionnel/: slave.py
window/unidirectional/: prompt.txt
wiper/CAN/: README.txt
(+256 files in other folders)
